--- a/Transmission/apkg.rc
+++ b/Transmission/apkg.rc
@@ -1,14 +1,14 @@
 Package:	Transmission	
 Section:	Addon
-Version:	2.92
-Packager:	Auska
-Email:		
-Homepage:	
+Version:	2.92-1
+Packager:	Fox
+Email:		fox@anionix.ru
+Homepage:	https://anionix.ru
 Description:	Transmission is one of the best choices for a BitTorrent client, being both extremely lightweight and feature-packed. Transmission's interface is easy to use, yet very powerful, especially when it comes to managing bandwidth.
 Icon:		Transmission.png
 AddonShowName:	Transmission
 AddonIndexPage:	index.html
-AddonUsedPort:	9092
+AddonUsedPort:
 InstDepend:
 InstConflict:
 StartDepend:
