--- a/entware-ng/apkg.rc
+++ b/entware-ng/apkg.rc
@@ -1,6 +1,6 @@
 Package:          entware-ng
 Packager:         Auska
-Email:            843772282@qq.com
+Email:            
 Homepage:         
 Description:      entware-ng for WDMyCloud
 Icon:             entware-ng.png
@@ -11,7 +11,7 @@ InstDepend:
 InstConflict:
 StartDepend:
 StartConflict:
-Version:          1.0.0
+Version:          1.1.0
 MinFWVer:
 MaxFWVer:
 IndividualFlag:
