--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,18 @@
 language: cpp
 sudo: required
-dist: trusty
+dist: xenial
 compiler:
   - gcc
 before_install:
   - sudo dpkg --add-architecture i386
-  - sudo apt-get update
-  - sudo apt-get install libc6:i386 libncurses5:i386 libstdc++6:i386 || true
-  - sudo apt-get install multiarch-support
-  - sudo apt-get install libxml2 libxml2:i386 
+  - sudo apt update -y
+  - sudo apt install -y libc6:i386 libncurses5:i386 libstdc++6:i386 || true
+  - sudo apt install -y multiarch-support
+  - sudo apt install -y libxml2 libxml2:i386
+  - sudo apt install -y curl build-essential ncurses-dev bc
 script:
   - ./pack.sh
+  - cd kernel && ./travis.sh && cd ..
 deploy:
   skip_cleanup: true
   provider: script
