--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - sudo apt install -y libxml2 libxml2:i386
   - sudo apt install -y curl build-essential ncurses-dev bc flex bison
 script:
-  - ./pack.sh
+  - cd package && ./pack.sh && cd ..
   - cd kernel && ./travis.sh && cd ..
 deploy:
   skip_cleanup: true
