--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ before_install:
   - sudo apt install -y libxml2 libxml2:i386
   - sudo apt install -y curl build-essential ncurses-dev bc flex bison
 script:
+  - chmod +x package/pack.sh
+  - chmod +x kernel/*.sh
   - cd package && ./pack.sh && cd ..
   - cd kernel && ./travis.sh && cd ..
 deploy:
