--- a/kernel/kernel.config
+++ b/kernel/kernel.config
@@ -2626,7 +2626,7 @@ CONFIG_QUOTACTL=y
 # CONFIG_AUTOFS4_FS is not set
 CONFIG_FUSE_FS=y
 # CONFIG_CUSE is not set
-CONFIG_OVERLAYFS_FS=y
+CONFIG_OVERLAYFS_FS=n
 
 #
 # Caches
