--- a/package/busybox/apkg.rc
+++ b/package/busybox/apkg.rc
@@ -2,16 +2,16 @@ Package:          busybox
 Packager:         machsix
 Email:            machsix@github.com
 Homepage:         https://github.com/machsix/WDMyCloud-Gen2
-Description:      BusyBox combines tiny versions of many common UNIX utilities into a single small executable. It provides replacements for most of the utilities you usually find in GNU fileutils, shellutils, etc. The utilities in BusyBox generally have fewer options than their full-featured GNU cousins; however, the options that are included provide the expected functionality and behave very much like their GNU counterparts. BusyBox provides a fairly complete environment for any small or embedded system
+Description:      BusyBox combines tiny versions of many common UNIX utilities into a single small executable.
 Icon:             busybox.png
 AddonShowName:    busybox
-AddonIndexPage:
-AddonUsedPort:
+AddonIndexPage:   index.php
+AddonUsedPort:    80
 InstDepend:
 InstConflict:
 StartDepend:
 StartConflict:
-Version:          1.0
+Version:          2.0
 MinFWVer:
 MaxFWVer:
 IndividualFlag:
